# VCalcBase

./: CMakeLists.txt  README.md
cmake/: get_mlir.cmake
include/: BackEnd.h
include/VCalc/: CMakeLists.txt  Dialect.h  Ops.h  Ops.td  Passes.h  Passes.td  Types.h  Types.td
lib/VCalc/: CMakeLists.txt  Dialect.cpp  LowerToLLVM.cpp  Ops.cpp  Types.cpp
runtime/: CMakeLists.txt
src/: BackEnd.cpp  CMakeLists.txt  main.cpp
